Linked the stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Booz Allen</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Booz Allen</h1>
