--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Booz Allen</h1>
+    <h1>Booz | Allen | Hamilton</h1>
   </body>
 </html>
