something is broken

--- a/index.html
+++ b/index.html
@@ -2,29 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="style.css">
-    <title>SASS</title>
+    <link rel="stylesheet" href="style.scss">
+    <title>SCSS</title>
   </head>
   <body>
     <div class="container">
-      <div class="container">
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-        <div class="paper"></div>
-      </div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
+      <div class="paper"></div>
     </div>
-=======
-    <title>Booz Allen</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>Booz | Allen | Hamilton</h1>
->>>>>>> 2cc7df87c68067ca8afd91850cb7b315b135dc84
   </body>
 </html>
