--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.scss">
-    <title>SCSS</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-      <div class="paper"></div>
-    </div>
-  </body>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Sassy</title>
+
+
+
+      <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+  <div class="container">
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+  <div class="paper">
+  </div>
+</div>
+
+
+</body>
 </html>
